--- a/style.css
+++ b/style.css
@@ -153,6 +153,13 @@
 	box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.16);
 }
 
+:root.dark {
+	& .yearn--shadow {
+		@apply border border-neutral-100;
+	}
+}
+
+
 .yearn--next-switch {
 	@apply relative flex h-[18px] w-8 border-neutral-500 rounded-full cursor-pointer transition-colors ease-in-out duration-200 p-0 items-center border-2;
 	&[aria-checked="true"] {
