--- a/style.css
+++ b/style.css
@@ -255,20 +255,23 @@ details {
 }
 
 /* 🔵 - Yearn Finance ******************************************************************************
-	** Tooltip
-	** In some place we need a tooltip to display some information on hover. This style controls the
-	** display of that tooltip.
-	**
-	** Usage:
-	**	<div className={'tooltip'}>
-	**		{'Something displayed'}
-	** 		<span className={'tooltiptext text-xs'}>
-	** 			<p>{'Tooltip content'}</p>
-	** 		</span>
-	** 	</div>
-	***************************************************************************************************/
+** Tooltip
+** In some place we need a tooltip to display some information on hover. This style controls the
+** display of that tooltip.
+**
+** Usage:
+**	<div className={'tooltip'}>
+**		{'Something displayed'}
+** 		<span className={'tooltiptext text-xs'}>
+** 			<p>{'Tooltip content'}</p>
+** 		</span>
+** 	</div>
+***************************************************************************************************/
 .tooltip {
 	@apply relative;
+}
+.tooltip .tooltipLight {
+	@apply invisible inset-x-0 absolute z-50 opacity-0 transition-opacity flex justify-center items-center;
 }
 .tooltip .tooltiptext {
 	@apply text-xs text-center invisible bg-neutral-0 text-neutral-900 absolute z-50 right-1 opacity-0 transition-opacity p-2;
@@ -280,6 +283,10 @@ details {
 .tooltip:hover .tooltiptext {
 	@apply visible opacity-100;
 }
+.tooltip:hover .tooltipLight {
+	@apply visible opacity-100;
+}
+
 .tooltip .tooltiptext::after {
 	content: "";
 	position: absolute;
