--- a/style.css
+++ b/style.css
@@ -77,28 +77,10 @@
 	** A custom overwrite is required for dark/light mode
 	***************************************************************************************************/
 	.appBox {
-		--x-px: calc(var(--x) * 1px);
-		--y-px: calc(var(--y) * 1px);
-		--opacity: var(--opacity);
-		--color: hsl(var(--color-neutral-300));
-		@apply relative flex aspect-video h-full w-full cursor-pointer flex-col items-center border border-neutral-300/50 p-6 shadow shadow-transparent transition-all duration-[400ms];
-
-		&:before,
-		&:after {
-			@apply pointer-events-none block absolute inset-[0px] z-[-1];
-			content: '';
-			z-index: -1;
-			opacity: var(--opacity);
-			background: radial-gradient(1200px circle at var(--x-px) var(--y-px), var(--color), transparent 40%);
-			transition: opacity 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-		}
-		&:before {
-			@apply pointer-events-none z-[-1];
-		}
+		@apply relative flex aspect-video h-full w-full cursor-pointer flex-col items-center border border-neutral-300/50 p-6 shadow shadow-transparent transition-all duration-[400ms] hover:bg-neutral-100/40;
 	}
 	:root.dark {
 		& .appBox {
-			--color: hsl(var(--color-neutral-100));
 			@apply border-neutral-100/30;
 		}
 	}
