--- a/style.css
+++ b/style.css
@@ -293,9 +293,9 @@
 		@apply invisible right-0 absolute z-50 opacity-0 transition-opacity;
 	}
 	.tooltip .tooltiptext {
-		@apply text-xs text-center invisible bg-neutral-0 text-neutral-900 absolute z-50 right-1 opacity-0 transition-opacity p-2;
+		@apply text-xs text-center invisible bg-neutral-0 text-neutral-900 absolute z-50 -right-7 opacity-0 transition-opacity;
 		width: 15rem;
-		top: 110%;
+		top: 130%;
 		margin-right: calc(-122px + 50%);
 		box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.16);
 	}
