--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@
 	.yearn--table-data-section-item {
 		@apply col-span-1 flex h-min flex-col md:flex-row justify-between pt-0 px-0 md:h-14 md:pt-4;
 		&[datatype='number'] {
-			@apply md:justify-end;
+			@apply md:text-right;
 			& > .yearn--table-data-section-item-value {
 				@apply font-number md:text-end;
 			}
