--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* This will load Tailwindcss + all the overwrite from Yearn lib */
-@import '@yearn-finance/web-lib/style.css';
+@import '@w84april/web-lib/style.css';
 @import '@rainbow-me/rainbowkit/styles.css';
 
 @font-face {
