--- a/packages/legacy/apps/lib/style.css
+++ b/packages/legacy/apps/lib/style.css
@@ -94,10 +94,15 @@
 	--color-neutral-0: 0 0% 5%;
 }
 
-
-body {@apply text-neutral-900;}
-h1 {@apply text-xl font-bold text-neutral-900;}
-h4 {@apply text-lg font-bold text-neutral-700;}
+body {
+	@apply text-neutral-900;
+}
+h1 {
+	@apply text-xl font-bold text-neutral-900;
+}
+h4 {
+	@apply text-lg font-bold text-neutral-700;
+}
 #__next {@apply w-full h-full}
 
 /* 🔵 - Yearn Finance ******************************************************
