--- a/packages/legacy/style.css
+++ b/packages/legacy/style.css
@@ -1,5 +1,6 @@
 /* External Dependencies */
 /* @import "@rainbow-me/rainbowkit/styles.css"; */
+@import "./legacy.css";
 
 /* Tailwind CSS */
 @import "tailwindcss";
@@ -7,6 +8,9 @@
 @custom-variant dark (&:where(.dark, .dark *));
 
 @theme {
+  --color-black: hsl(0 0% 0%);
+  --color-white: hsl(0 0% 100%);
+
   --color-primary: hsl(220 95% 50%);
   --color-neutral-0: hsl(0 0% 100%);
   --color-neutral-100: hsl(0 0% 96%);
@@ -31,13 +35,13 @@
   --color-pink-800: hsl(332 81% 33%);
   --color-pink-900: hsl(332 100% 21%);
 
-  --color-gray-300: "#E1E1E1";
-  --color-gray-400: "#9D9D9D";
-  --color-gray-500: "#424242";
-  --color-gray-600: "#292929";
-  --color-gray-700: "#282828";
-  --color-gray-800: "#181818";
-  --color-gray-900: "#0C0C0C";
+  --color-gray-300: hsl(0 0% 88%);
+  --color-gray-400: hsl(0 0% 62%);
+  --color-gray-500: hsl(0 0% 26%);
+  --color-gray-600: hsl(0 0% 16%);
+  --color-gray-700: hsl(0 0% 16%);
+  --color-gray-800: hsl(0 0% 9%);
+  --color-gray-900: hsl(0 0% 5%);
 
   /* 🔵 - Yearn Finance
   /* These colors should be used fairly conservatively throughout your UI to
@@ -90,9 +94,7 @@
 body {
   color: var(--color-neutral-900);
 }
-/* h1 {
-  @apply text-xl font-bold text-neutral-900;
+
+#main {
+  @apply flex flex-col w-full h-full min-h-screen bg-neutral-0;
 }
-h4 {
-  @apply text-lg font-bold text-neutral-700;
-} */
