feat: init font and v3 list

--- a/packages/legacy/style.css
+++ b/packages/legacy/style.css
@@ -1,7 +1,7 @@
 /* External Dependencies */
 /* @import "@rainbow-me/rainbowkit/styles.css"; */
 @import "./legacy.css";
-
+@import "./public/fonts/fonts.css";
 /* Tailwind CSS */
 @import "tailwindcss";
 
@@ -97,4 +97,11 @@ body {
 
 #main {
   @apply flex flex-col w-full h-full min-h-screen bg-neutral-0;
+}
+
+@layer utilities {
+  .font-number {
+    font-family:
+      "Aeonik Mono", ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  }
 }
