--- a/packages/legacy/legacy.css
+++ b/packages/legacy/legacy.css
@@ -1,6 +1,6 @@
-/* 🔵 - Yearn Finance ******************************************************
+/* 🔵 - Yearn Finance ******************************************************************************
 ** Header an navbar
-**************************************************************************/
+***************************************************************************************************/
 .yearn--header {
   @apply inset-x-0 top-0 z-50 mb-5 flex h-20 w-full max-w-[1200px] flex-row items-center justify-between p-4 text-xs sm:text-sm md:inset-x-auto md:mb-0 md:px-0 md:text-base;
 }
@@ -12,5 +12,141 @@
 
   &.active {
     @apply text-neutral-900 font-bold;
+  }
+}
+
+/* 🔵 - Yearn Finance ******************************************************************************
+** Tooltip
+** In some place we need a tooltip to display some information on hover. This style controls the
+** display of that tooltip.
+**
+** Usage:
+**	<div className={'tooltip'}>
+**		{'Something displayed'}
+** 		<span className={'tooltiptext text-xs'}>
+** 			<p>{'Tooltip content'}</p>
+** 		</span>
+** 	</div>
+***************************************************************************************************/
+.tooltip {
+  @apply relative;
+}
+.tooltip .tooltipLight {
+  @apply invisible inset-x-0 absolute z-50 opacity-0 transition-opacity flex justify-center items-center;
+}
+.tooltip .tooltipFees {
+  @apply invisible right-0 absolute z-50 opacity-0 transition-opacity;
+}
+.tooltip .tooltiptext {
+  @apply text-xs text-center invisible bg-neutral-0 text-neutral-900 absolute z-50 -right-7 opacity-0 transition-opacity;
+  width: 15rem;
+  top: 130%;
+  margin-right: calc(-122px + 50%);
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.16);
+}
+.tooltip:hover .tooltiptext {
+  @apply visible opacity-100;
+}
+.tooltip:hover .tooltipLight {
+  @apply visible opacity-100;
+}
+.tooltip:hover .tooltipFees {
+  @apply visible opacity-100;
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  bottom: 98%;
+  right: 50%;
+  margin-right: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: hsl(var(--color-neutral-0)) transparent transparent transparent;
+  transform: rotate(180deg);
+}
+
+.tooltip.top .tooltiptext {
+  top: -105%;
+  bottom: unset;
+}
+.tooltip.top .tooltiptext::after {
+  top: 98%;
+  transform: rotate(0deg);
+}
+
+/* 🔵 - Yearn Finance ******************************************************************************
+** Table
+** Fake table properties
+***************************************************************************************************/
+.yearn--table-head-label {
+  @apply text-start text-base text-neutral-400;
+}
+.yearn--table-head-label-wrapper {
+  @apply flex flex-row items-center justify-start space-x-1;
+  &[datatype="number"] {
+    justify-content: flex-end;
+    & > .yearn--table-head-label {
+      text-align: right;
+    }
+  }
+}
+
+.yearn--table-wrapper {
+  @apply grid w-full grid-cols-1 border-t border-neutral-200 py-2 px-4 md:grid-cols-[64px_repeat(7,_minmax(0,_1fr))] md:border-none md:px-10;
+}
+.yearn--table-token-section {
+  @apply col-span-2 mb-2 flex flex-row items-center justify-between py-4 md:mb-0 md:py-0;
+}
+.yearn--table-token-section-item {
+  @apply flex flex-row items-center space-x-4 md:space-x-6;
+}
+.yearn--table-token-section-item-image {
+  @apply h-8 min-h-[32px] w-8 min-w-[32px] rounded-full md:flex;
+}
+.yearn--table-data-section {
+  @apply col-span-5 grid grid-cols-1 gap-x-0 md:gap-x-7 md:grid-cols-8 gap-y-0;
+}
+.yearn--table-data-section-item-label {
+  @apply inline text-start text-neutral-500 md:hidden text-sm;
+}
+.yearn--table-data-section-item-value {
+  @apply text-neutral-900;
+}
+.yearn--table-data-section-item {
+  @apply flex h-min flex-row md:flex-col justify-between pt-0 px-0 md:h-14 md:pt-4;
+  &[datatype="number"] {
+    @apply md:text-right md:justify-end;
+    & > .yearn--table-data-section-item-value {
+      font-variant-numeric: tabular-nums;
+    }
+  }
+}
+
+.yearn--table-label {
+  @apply inline text-start text-neutral-500 md:hidden;
+}
+
+.yearn--next-switch {
+  @apply relative flex h-[18px] w-8 border-neutral-500 rounded-full cursor-pointer transition-colors ease-in-out duration-200 p-0 items-center border-2;
+  &[aria-checked="true"] {
+    @apply bg-neutral-400 border-neutral-900;
+    & > div {
+      @apply bg-neutral-900;
+    }
+  }
+  &[aria-checked="false"] {
+    @apply bg-transparent border-neutral-600;
+    & > div {
+      @apply bg-neutral-600;
+    }
+  }
+
+  &[disabled] {
+    @apply opacity-40 cursor-not-allowed;
+  }
+
+  & > div {
+    @apply mx-1 pointer-events-none inline-block h-2 w-2 rounded-full transition ease-in-out duration-200;
   }
 }
