--- a/packages/legacy/legacy.css
+++ b/packages/legacy/legacy.css
@@ -80,7 +80,7 @@
 ** Fake table properties
 ***************************************************************************************************/
 .yearn--table-head-label {
-  @apply text-start text-base text-neutral-400;
+  @apply text-start text-base;
 }
 .yearn--table-head-label-wrapper {
   @apply flex flex-row items-center justify-start space-x-1;
@@ -114,7 +114,7 @@
   @apply text-neutral-900;
 }
 .yearn--table-data-section-item {
-  @apply flex h-min flex-row md:flex-col justify-between pt-0 px-0 md:h-14 md:pt-4;
+  @apply flex h-min flex-row md:items-start justify-between pt-0 px-0 md:h-14 md:pt-4;
   &[datatype="number"] {
     @apply md:text-right md:justify-end;
     & > .yearn--table-data-section-item-value {
