--- a/packages/legacy/legacy.css
+++ b/packages/legacy/legacy.css
@@ -114,7 +114,7 @@
   @apply text-neutral-900;
 }
 .yearn--table-data-section-item {
-  @apply flex h-min flex-row md:items-start justify-between pt-0 px-0 md:h-14 md:pt-4;
+  @apply flex h-min flex-row md:items-start justify-between pt-0 px-0 md:min-h-14 md:pt-4;
   &[datatype="number"] {
     @apply md:text-right md:justify-end;
     & > .yearn--table-data-section-item-value {
@@ -230,6 +230,22 @@
     &:not(:disabled):not([aria-busy="true"]):hover {
       @apply bg-pink-600/80;
     }
+  }
+}
+.yearn--button-smaller {
+  @apply h-8 text-xs py-2 w-16 px-2;
+}
+.yearn--button-smaller.reverted {
+  @apply text-neutral-900 bg-neutral-0 font-normal border border-transparent;
+  &:disabled {
+    @apply bg-neutral-200 opacity-40;
+  }
+  &:not(:disabled):not([aria-busy="true"]):hover {
+    @apply bg-neutral-200;
+  }
+
+  &[aria-busy="true"] svg {
+    @apply text-neutral-900;
   }
 }
 
