--- a/packages/legacy/style.css
+++ b/packages/legacy/style.css
@@ -5,8 +5,6 @@
 /* Tailwind CSS */
 @import "tailwindcss";
 
-@custom-variant dark (&:where(.dark, .dark *));
-
 @theme {
   --color-black: hsl(0 0% 0%);
   --color-white: hsl(0 0% 100%);
@@ -102,6 +100,11 @@
     --color-neutral-100: hsl(231 100% 11%);
     --color-neutral-0: hsl(231 100% 6%);
   }
+}
+
+html {
+  overflow: auto !important;
+  padding-right: 0 !important;
 }
 
 body {
